# stdlib

./: .clang-format  meson.build  meson_options.txt  x86_64-w64-mingw32.txt
.lldb/: formatters.py  lldbinit
include/: assert.h  compiler.h  math.h  memory.h  print.h  string_builder.h  string_cursor.h  teju.h  text.h  type.h
test/: list_test.c  math_test.c  memory_test.c  meson.build  platform.h  platform_linux.c  platform_windows.c  string_builder_test.c  string_cursor_test.c  teju_test.c  text_bench.c  text_test.c
tool/: gen_pseudo_random.c  gen_pseudo_random.impl  meson.build  platform.h  platform_linux.c  platform_windows.c
